Revert "update filter"
This reverts commit 24460794f3cfae294bf0d5fc1460494849269ca5.
