# storage/api-docs/api-docs.json
@@ -22,7 +22,7 @@
                 "tags": [
                     "Authentication"
                 ],
-                "summary": "Login User using Email or Username",
+                "summary": "Login User menggunakan Email atau Username",
                 "operationId": "222b2625838e3c57e017987f73598fda",
                 "requestBody": {
                     "required": true,
@@ -36,7 +36,7 @@
                                 "properties": {
                                     "login_identity": {
                                         "type": "string",
-                                        "example": "rasyid_ridho or rasyid@polman.astra.ac.id"
+                                        "example": "rasyid_ridho atau rasyid@polman.astra.ac.id"
                                     },
                                     "password": {
                                         "type": "string",
@@ -51,7 +51,7 @@
                 },
                 "responses": {
                     "200": {
-                        "description": "Login Successful"
+                        "description": "Login Berhasil"
                     },
                     "401": {
                         "description": "Unauthorized"
@@ -68,7 +68,7 @@
                 "operationId": "ad65cbbd4e9f201619eae184a5961a98",
                 "responses": {
                     "200": {
-                        "description": "Logout Successful"
+                        "description": "Logout Berhasil"
                     },
                     "401": {
                         "description": "Unauthenticated"
@@ -86,8 +86,8 @@
                 "tags": [
                     "Kategori"
                 ],
-                "summary": "Retrieve all categories",
-                "description": "Add query ?active_only=true for dropdown forms",
+                "summary": "Mengambil semua data kategori",
+                "description": "Bisa ditambahkan query ?active_only=true untuk dropdown form",
                 "operationId": "7859f77a79e6eba83303683052eaaa59",
                 "parameters": [
                     {
@@ -101,7 +101,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Successfully retrieved categories"
+                        "description": "Berhasil mengambil data kategori"
                     }
                 },
                 "security": [
@@ -114,7 +114,7 @@
                 "tags": [
                     "Kategori"
                 ],
-                "summary": "Create a new category",
+                "summary": "Membuat kategori baru",
                 "operationId": "cfc2bf78680407adc9f8ad42c00a3758",
                 "requestBody": {
                     "required": true,
@@ -131,7 +131,7 @@
                                     },
                                     "deskripsi": {
                                         "type": "string",
-                                        "example": "Category for software projects"
+                                        "example": "Kategori untuk projek software"
                                     }
                                 },
                                 "type": "object"
@@ -141,10 +141,10 @@
                 },
                 "responses": {
                     "201": {
-                        "description": "Category successfully created"
+                        "description": "Kategori berhasil dibuat"
                     },
                     "500": {
-                        "description": "Failed to save"
+                        "description": "Gagal menyimpan"
                     }
                 },
                 "security": [
@@ -159,7 +159,7 @@
                 "tags": [
                     "Kategori"
                 ],
-                "summary": "Retrieve a single category detail",
+                "summary": "Ambil detail satu kategori",
                 "operationId": "a38bd9cadc96c79c5fe4bd2aeb29f88e",
                 "parameters": [
                     {
@@ -173,10 +173,10 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Successfully retrieved data"
+                        "description": "Berhasil mengambil data"
                     },
                     "404": {
-                        "description": "Data not found"
+                        "description": "Data tidak ditemukan"
                     }
                 },
                 "security": [
@@ -189,7 +189,7 @@
                 "tags": [
                     "Kategori"
                 ],
-                "summary": "Update an existing category",
+                "summary": "Update kategori yang sudah ada",
                 "operationId": "41243e4f5f696e9cdb2bef6f30a6e93a",
                 "parameters": [
                     {
@@ -225,10 +225,10 @@
                 },
                 "responses": {
                     "200": {
-                        "description": "Successfully updated"
+                        "description": "Berhasil diperbarui"
                     },
                     "404": {
-                        "description": "Not found"
+                        "description": "Tidak ditemukan"
                     }
                 },
                 "security": [
@@ -241,7 +241,7 @@
                 "tags": [
                     "Kategori"
                 ],
-                "summary": "Delete a category",
+                "summary": "Hapus kategori",
                 "operationId": "cd3ac58af134945ce299ac0885c3352d",
                 "parameters": [
                     {
@@ -255,10 +255,10 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Category successfully deleted"
+                        "description": "Kategori berhasil dihapus"
                     },
                     "404": {
-                        "description": "Category not found"
+                        "description": "Kategori tidak ditemukan"
                     }
                 },
                 "security": [
@@ -273,7 +273,7 @@
                 "tags": [
                     "Kategori"
                 ],
-                "summary": "Enable / Disable Category",
+                "summary": "Aktifkan / Nonaktifkan Kategori",
                 "operationId": "c47e2991b625bece0f6bce8bfe10926c",
                 "parameters": [
                     {
@@ -287,10 +287,10 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Status successfully changed"
+                        "description": "Status berhasil diubah"
                     },
                     "404": {
-                        "description": "Category not found"
+                        "description": "Kategori tidak ditemukan"
                     }
                 },
                 "security": [
@@ -674,6 +674,30 @@
                 ]
             }
         },
+        "/api/mahasiswa": {
+            "get": {
+                "tags": [
+                    "Mahasiswa"
+                ],
+                "summary": "Get all mahasiswa",
+                "operationId": "894b4ffe087b183ddda16894a0a50a33",
+                "responses": {
+                    "200": {
+                        "description": "List of mahasiswa",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "type": "object"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/api/modul": {
             "get": {
                 "tags": [
@@ -895,19 +919,10 @@
                         "schema": {
                             "type": "string",
                             "enum": [
-                                "In Progress",
+                                "InProgress",
                                 "Completed",
-                                "On Hold"
+                                "OnHold"
                             ]
-                        }
-                    },
-                    {
-                        "name": "kategori_id",
-                        "in": "query",
-                        "description": "Filter berdasarkan kategori",
-                        "required": false,
-                        "schema": {
-                            "type": "integer"
                         }
                     }
                 ],
@@ -1202,57 +1217,6 @@
                 "responses": {
                     "200": {
                         "description": "Success"
-                    }
-                },
-                "security": [
-                    {
-                        "bearerAuth": []
-                    }
-                ]
-            }
-        },
-        "/api/projek/{id}/member/{memberId}": {
-            "delete": {
-                "tags": [
-                    "Projek"
-                ],
-                "summary": "Remove a project member",
-                "operationId": "ab479c8b6deeaeec5fc8fd6ba6b6d5fa",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "description": "Project ID",
-                        "required": true,
-                        "schema": {
-                            "type": "integer"
-                        }
-                    },
-                    {
-                        "name": "memberId",
-                        "in": "path",
-                        "description": "Member ID",
-                        "required": true,
-                        "schema": {
-                            "type": "integer"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Success"
-                    },
-                    "403": {
-                        "description": "Forbidden"
-                    },
-                    "404": {
-                        "description": "Not Found"
-                    },
-                    "422": {
-                        "description": "Unprocessable Entity"
-                    },
-                    "500": {
-                        "description": "Server Error"
                     }
                 },
                 "security": [
@@ -1661,7 +1625,7 @@
     "tags": [
         {
             "name": "Kategori",
-            "description": "API Endpoints to manage Project Categories"
+            "description": "API Endpoints untuk mengelola Kategori Projek"
         },
         {
             "name": "Authentication",
@@ -1674,6 +1638,10 @@
         {
             "name": "Logbook",
             "description": "Logbook"
+        },
+        {
+            "name": "Mahasiswa",
+            "description": "Mahasiswa"
         },
         {
             "name": "Modul",
